# CLTuneDemos

./: .gitignore  CMakeLists.txt  README.md  make_eclipse_projects.bat  make_eclipse_projects.sh
ParallelReduction/src/: main.cpp
cmake/Modules/: FindCLTune.cmake
median_filter/: .cproject  .gitignore  .project  compute_profiler.rc
median_filter/results/: core-i7-2600k-AMD-runtime-5x5.csv  core-i7-2600k-AMD-runtime-7x7.csv  core-i7-2600k-Intel-runtime-5x5.csv  core-i7-2600k-Intel-runtime-7x7.csv  gtx-560-ti-NVIDIA-runtime-5x5.csv  gtx-560-ti-NVIDIA-runtime-7x7.csv
median_filter/src/: main.cpp  medfilt.cl  medfilt.clh  medfilt_baseline.cl
util/include/: CCLIArgumentsBase.h  CLIArgumentsBase.h
util/src/: CCLIArgumentsBase.cpp  CLIArgumentsBase.cpp
